# ros2_pick_and_place

./: .gitignore  QUICKSTART.md  README.md  Setting Up USB Camera In WSL2.md
.github/workflows/: ci.yml
src/pick_n_place_bot/: CMakeLists.txt  package.xml
src/pick_n_place_bot/arduino/: arduino.ino
src/pick_n_place_bot/config/: params.yaml
src/pick_n_place_bot/include/pick_n_place_bot/: camera_node.hpp  detector_node.hpp  manipulator_node.hpp
src/pick_n_place_bot/launch/: robot_arm.launch.py
src/pick_n_place_bot/src/: camera_node.cpp  detector_node.cpp  manipulator_node.cpp
